--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,6 +204,9 @@ h3,
 
 /*** 9.0 FOOTER ***/
 footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
   padding: 30px 0;
   clear: both;
   font-size: 12px;
